--- a/.github/workflows/TypeScript-tests.yml
+++ b/.github/workflows/TypeScript-tests.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: npm install
-      run: cd DotnetTemplate.Web && npm install && npm build
+      run: cd DotnetTemplate.Web && npm install && npm run build
     - name: TypeScript Tests
       run: cd DotnetTemplate.Web && npm t
     - name: Lint
